import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
import org.apache.tools.ant.filters.ReplaceTokens


plugins {
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'java'
}

group 'com.sovdee'
project.ext.jomlVersion = "1.10.5"

configurations.all {
    resolutionStrategy.cacheChangingModulesFor 1, 'minutes'
}

repositories {
    mavenCentral()
    maven {
        url 'https://repo.papermc.io/repository/maven-public/'
    }
    maven {
        url 'https://repo.skriptlang.org/releases'
    }
}

dependencies {
    compileOnly("io.papermc.paper:paper-api:1.20.2-R0.1-SNAPSHOT")
    compileOnly("com.github.SkriptLang:Skript:2.7.0")
    shadow "org.bstats:bstats-bukkit:3.0.2"
    implementation "org.joml:joml:${jomlVersion}"
}

processResources {
    filter ReplaceTokens, tokens: ["version": project.property("version")]
    from("lang/") {
        include '*.lang'
        into 'lang/'
    }
}

javadoc {
    source = sourceSets.main.allJava
    classpath = configurations.compileClasspath
    options.encoding = 'UTF-8'
}

task shadowJar(overwrite: true, type: ShadowJar) {
    archiveFileName = 'skript-particle.jar'
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(17))
}

task copyJar(type: Copy) {
    dependsOn shadowJar
    from "build/libs/skript-particle.jar"
    into "e:/PaperServer/plugins"
}
